src/style.css
@import "tailwindcss";



@media screen and (width < 1024px) and (width >= 768px) {
  :root {
    font-size: 14px;
  }
}

@media screen and (width < 768px) and (width >= 410px) {
  :root {
    font-size: 12px;
  }
}

@font-face {
  font-family: inter;
  src: url("./assets/fonts/Inter/Inter-VariableFont_opsz,wght.ttf") format("ttf");
  font-weight: normal;
  font-style: normal;
}

@theme {
  /* Color variables */
  --color-main-black: #09090B;
  --color-main-white: #FAFAFA;
  --color-secondary-black: #27272A;
  --color-secondary-white: #E4E4E7;

  /* Font variables */
  --font-inter: inter;

  /* Breakpoints */
  --breakpoint-c-s: 25.625rem;
  --breakpoint-c-xs: 20.3125rem;
}

